@@ -81,6 +81,7 @@ sub _do_asy {
    _schedule;
 }
 
+# to be removed
 sub dotted_quad($) {
    $_[0] =~ /^(?:25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[0-9][0-9]?)
             \.(?:25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[0-9][0-9]?)
