@@ -3,6 +3,8 @@ Revision history for Perl extension AnyEvent.
 3.51
 	- added (experimental) AnyEvent::DNS module.
         - added (experimental) AnyEvent::Socket module.
+        - make condvar->end call ->send as documented.
+        - make condvar constructor support the documented cb => argument.
         - support more of the POSIX forms instead of a pure dooted quad for
           verbatim ip addresses.
         - AnyEvent::Socket::inet_aton will use AnyEvent::DNS now and not fork anymore.
